--- a/bio.style.css
+++ b/bio.style.css
@@ -1,14 +1,39 @@
+html {font-family:Helvetica;}
+
+article {
+  width:100%;
+  height: 300px;
+
+}
+
+article img {
+  width: 30%;
+}
+
+article section {
+  display: inline-block;
+  vertical-align: top;
+  width: 60%;
+  padding: 0 25px;
+}
+
+h1 {
+  color: grey;
+  font-family: 'Source Serif Pro', serif;
+  letter-spacing: 1px;
+  text-align: left;
+}
+
 p {
   font-family:'Kumbh Sans', sans-serif;
   text-align: left;
-  font-size: 12px;
+  font-size: 14px;
   word-spacing: 3px;
   letter-spacing: 1px;
   line-height: 1.4;
   color: grey
 }
 
-#hp  {
-float: top;
- margin: 0 15px 0 0;
+div {
+  margin: 20px;
 }
