--- a/bio.style.css
+++ b/bio.style.css
@@ -45,11 +45,13 @@ p {
 
 div {
   margin: 10px;
+
 }
 
 
 img {
   padding: 5px 28px;
+
 }
 
 
@@ -64,6 +66,7 @@ button {
   cursor: pointer;
   display: inline-block;
   align-items: right;
+
   /*place inside nav element, float:right property, give new clear:both or clear:right */
 
 }
@@ -89,10 +92,10 @@ button:hover {
 .dropbtn {
   background-color: darkgrey;
   color: white;
-  padding: 16px;
   font-size: 16px;
   border: none;
   cursor: pointer;
+  margin-top: 40px;
 }
 
 /* Dropdown button on hover & focus */
@@ -103,11 +106,18 @@ button:hover {
 /* The container <div> - needed to position the dropdown content
 float right reverses order,  */
 .dropdown {
-  position: fixed;
+ display: inline;
+  left: 400px;
   right: 0px;
   width: 500px;
-  padding: 10px;
-  display: inline-block;
+padding-left: 40px;
+
+background: url('photos/header.jpg') no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -133,4 +143,4 @@ float right reverses order,  */
 .dropdown-content a:hover {background-color: #ddd}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {display:inline-block;}
