--- a/bio.style.css
+++ b/bio.style.css
@@ -17,6 +17,10 @@ article section {
   padding: 0 25px;
 }
 
+main {
+  margin: 0px;
+}
+
 h1 {
   color: grey;
   font-family: 'Source Serif Pro', serif;
@@ -112,12 +116,20 @@ float right reverses order,  */
   width: 500px;
 padding-left: 40px;
 
-background: url('photos/header.jpg') no-repeat center center fixed;
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
 
+}
+
+.all {
+  padding: 0;
+  border: 0;
+  margin: 0;
+  height: 150px;
+  display: static;
+  background: url('photos/header.jpg') no-repeat fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 /* Dropdown Content (Hidden by Default) */
